--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ h1 {
   text-align: center;
 }
 .caixa1 {
-  background: blue;
+  background: rgb(149, 9, 177);
   position: absolute;
   color: #FFFFFF;
   width: 200px;
@@ -14,7 +14,7 @@ h1 {
   top: 0;
 }
 .caixa2 {
-  background: red;
+  background: rgb(23, 209, 223);
   position: absolute;
   color: #FFFFFF;
   width: 200px;
@@ -28,5 +28,35 @@ h1 {
   left: 0;
   background-color: chartreuse;
   width: 100%;
-  height: 80px;
+  height: 45px;
 }
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+ }
+ li {
+float: left;
+ }
+ li a{
+   display: block;
+   color: #FFFFFF;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
+ }
+ li a:hover{
+   background:yellow;
+   color: black;
+ }
+ #passat {
+     width:40%;
+     height: 200px;
+     background: gray;
+     width: 90%;
+     margin: 20px;
+     border-color: black;
+     border-width: 20px;
+     border-style: double;
+ }
